--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,13 +1,11 @@
 # dependencies
 node_modules/
+**/node_modules/
 
 # env
-.env
+**/.env
+**/.env.*
 
 # build
-dist/
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+**/dist/
+**/build/
