--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
     "prisma": "^6.19.1",
     "socket.io": "^4.8.3",
     "zod": "^4.2.1"
