--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@prisma/client": "^6.19.1",
     "prisma": "^6.19.1"
+  },
+  "devDependencies": {
+    "pino-pretty": "^13.1.3"
   }
 }
